apply plugin: 'java'
// Integration with eclipse IDE (optional; should and must work if you are brave
// and bold enough to edit with vim)
apply plugin: 'eclipse'
apply plugin: 'maven'
apply plugin: 'jacoco'

repositories {
    mavenCentral()
}

sourceCompatibility = 9
targetCompatibility = 9
version = '1.2.0'
group = 'xml.spreadsheet'
jar.archiveName = "XMLSpreadsheetGenerator.jar"

jar {
    manifest {
        attributes 'Implementation-Title': 'XML Spreadsheet Generator', 'Implementation-Version': version
    }
}

dependencies {
	testCompile group: 'junit', name: 'junit', version: '4.12'
	testCompile 'jdom:jdom:1.1'
	testCompile 'jaxen:jaxen:1.2.0'
}

// Jacoco configuration

jacoco {
    toolVersion = "0.8.7"
    reportsDir = file("$buildDir/customJacocoReportDir")
}

jacocoTestReport {
    reports {
        xml.enabled true
        csv.enabled false
    }
}

javadoc {
    source = sourceSets.main.allJava
    classpath = configurations.compile
}

